kubernetes/apps/base/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  selector:
    app: plex
  ports:
    - name: http
      port: 32400
      targetPort: http
