kubernetes/apps/base/media/plex/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`plex.theblacklodge.dev`)
      kind: Rule
      services:
        - name: plex
          port: 32400
